# traffic-monitor-with-webui

./: .gitignore  LICENSE  PacketFilter.py  README.md  main.py  output.prof  package.json  pyproject.toml
backend/: .env  DockerFile  README.md  config.yaml  log.txt  main.py  pyproject.toml
backend/api/: __init__.py
backend/api/routes/: Auth.py  Capture.py  Config.py  Query.py
backend/core/: AuthService.py  __init__.py  config.py  services.py
backend/db/: Client.py  Crud.py  CrudService.py  DatabaseOperations.py  PipelineBuilder.py  QueryExecutor.py  Session.py  UserCollection.py  UserDB.py  UserService.py
backend/models/: Dtos.py  Filter.py  User.py  __init__.py
backend/packet/: Packet.py  PacketAnalyzer.py  PacketCapturer.py  PacketConsumer.py  PacketProducer.py  Processors.py  __init__.py
backend/packet/utils/: DoubleBufferQueue.py  DynamicQueue.py  Interfaces.py  Strategy.py
backend/routes/: Auth.py  Capture.py  Query.py  __init__.py
backend/service/: AuthService.py  CaptureService.py  ConfigService.py  CrudService.py  GeoIpService.py
backend/tests/: test_routes.py
backend/utils/: BpfUtils.py  DoubleBufferQueue.py  Interfaces.py  Strategy.py  __init__.py
frontend/: .env  package.json  tailwind.config.js
frontend/src/: App.tsx  fakedata.ts  index.css  main.tsx  (+1 more)
models/: Filter.py
packet/: Packet.py  PacketAnalyzer.py  PacketCapturer.py  PacketConsumer.py  PacketProducer.py  __init__.py
routes/: Capture.py  __init__.py
utils/: BpfFilterBuilder.py  BpfUtils.py  DoubleBufferQueue.py  DynamicQueue.py  Interfaces.py  Strategy.py  __init__.py
(+44 files in other folders)
