[tool.poetry]
name = "traffic-monitor-fastapi"
version = "0.1.0"
description = ""
authors = ["Timspizza <peisen.jiang2001@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
pypcap = "^1.3.0"
scapy = "^2.6.1"
uvicorn = "^0.34.0"
netifaces = "^0.11.0"
py-spy = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
